--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <h1> Exercice 2: SOAP</h1>
+    <h1>SOAP : convert Celcius to Fahrenheit </h1>
     <form name="soap-client" action="" method="POST">
         <label for="value">Valeur en Celsius</label>
         <input type="text" name="value" id="value" />
@@ -18,3 +18,4 @@
     <pre lang="xml" id="result"></pre>
 </body>
 </html>
+
